# sandbox

./: .gitignore  Cafe Company Comparison.xlsx  Glossary.xlsx  README.md  mypy.ini  pyproject.toml
AutoML/: Dockerfile_mlflow  Dockerfile_streamlit  README.md  app.py  docker-compose.yml  plot_model.csv  requirements.txt
LangChain/: 20240914_annual_report_summarizer.ipynb
notebook/: 20231009_fine_tune_sentence_bert.ipynb  20231015_network_visualize.ipynb  20231015_newspaper_langchain.ipynb  20231105_semantic_scholar_api.ipynb  20231123_web_scraping.ipynb  20241001_try_format_document.ipynb  LangChain_Agent_Query_NO_API_KEY.ipynb  LangChain_PDF_URL_Query_NO_API_KEY.ipynb  network_visualize.ipynb  wiki_temp.ipynb
notebooks/: 20230529_compare_libpostal_with_GeocodingAPI.ipynb  20231015_keybert_for_semantic_sim.ipynb  20231015_newspaper_langchain.ipynb  20231123_web_scraping.ipynb  20240102_LangChain_Agent_Query_NO_API_KEY.ipynb  20240102_LangChain_PDF_URL_Query_NO_API_KEY.ipynb  20240203.ipynb  20240203_web_search_sustainability.ipynb  20240316_BingWebSearchAPI.ipynb  20240516_innovation_network .ipynb  20240803_s3_athena_ecs_fargate.ipynb  20240804_patent_analysis.ipynb  20240914_annual_report_summarizer.ipynb  20240920_try_pyserini.ipynb  20240921_try_LangX.ipynb  20241004_try_ppt.ipynb  20241018_information_summary.ipynb  20241103_web_scraping.ipynb  20241130_docling_superresolution.ipynb  20241221_newsapi.ipynb  20241227_llm_agent.ipynb  20250101_try_redis.ipynb  20250218_serpapi_sample.ipynb  20250302_agentops.ipynb  20250315_news_duplicates.ipynb  Cafe Company Comparison.xlsx  merged.csv  merged.parquet  news_release.parquet  newsrelease_doutor.csv  prtimes.csv  prtimes.parquet  web_search.csv  (+2 more)
(+19 files in other folders)
