[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["minagawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
